Fixed a few spacing issues

--- a/blog/static/css/base.css
+++ b/blog/static/css/base.css
@@ -1,3 +1,14 @@
+html {
+  font-size: 13.5px;
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  html {
+    font-size: 16px;
+  }
+}
+
 .padding-for-footer {
   padding-bottom: 250px;
 }
